y.output
Nonterminals useless in grammar

   aggtypes


Terminals unused in grammar

   KWD_INCLUDE


Rules useless in grammar

  174 aggtypes: KWD_STRUCT
  175         | KWD_UNION


Rules useless in parser due to conflicts

    4 line: %empty

   97 constant: %empty


State 1 conflicts: 11 shift/reduce, 11 reduce/reduce
State 33 conflicts: 1 shift/reduce
State 47 conflicts: 5 reduce/reduce
State 64 conflicts: 1 shift/reduce
State 132 conflicts: 1 shift/reduce
State 170 conflicts: 3 shift/reduce
State 174 conflicts: 3 shift/reduce
State 182 conflicts: 1 shift/reduce
State 183 conflicts: 1 shift/reduce
State 184 conflicts: 1 shift/reduce
State 196 conflicts: 1 shift/reduce
State 202 conflicts: 1 shift/reduce
State 219 conflicts: 3 shift/reduce
State 229 conflicts: 3 shift/reduce
State 247 conflicts: 1 shift/reduce
State 248 conflicts: 1 shift/reduce
State 249 conflicts: 3 shift/reduce
State 250 conflicts: 3 shift/reduce
State 251 conflicts: 3 shift/reduce
State 252 conflicts: 1 shift/reduce
State 253 conflicts: 1 shift/reduce
State 254 conflicts: 3 shift/reduce
State 255 conflicts: 3 shift/reduce
State 256 conflicts: 3 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: %empty
    2     | prog line
    3     | prog error

    4 line: %empty
    5     | comment
    6     | module
    7     | end_module
    8     | aggregate
    9     | constant
   10     | varset
   11     | literal

   12 $@1: %empty

   13 varset: sdlvar KWD_EQ quoted_string $@1 EOL

   14 $@2: %empty

   15 varset: sdlvar KWD_EQ value $@2 EOL

   16 $@3: %empty

   17 literal: KWD_LITERAL EOL $@3 literal

   18 $@4: %empty

   19 literal: tline $@4 literal
   20        | KWD_END_LITERAL EOL

   21 module: KWD_MODULE id KWD_IDENT quoted_string EOL

   22 end_module: KWD_END_MODULE EOL

   23 value: sdlvar
   24      | decimal
   25      | hexadecimal
   26      | octal

   27 tag: KWD_TAG quoted_string

   28 pref: KWD_PREFIX quoted_string

   29 inc: KWD_INC value

   30 sizespec: KWD_LENGTH value
   31         | KWD_DIMENSION value

   32 signspec: KWD_SIGNED
   33         | KWD_UNSIGNED

   34 basetypes: KWD_PTR
   35          | KWD_BYTE
   36          | KWD_WORD
   37          | KWD_LONG
   38          | KWD_QUAD
   39          | KWD_OCTA
   40          | KWD_BFLD
   41          | KWD_FLOAT
   42          | KWD_DOUBLE

   43 syntypes: KWD_PACKED
   44         | KWD_ASCIC
   45         | KWD_DESC
   46         | KWD_HWADDR
   47         | KWD_IPADDR
   48         | KWD_IP4ADDR
   49         | KWD_IP6ADDR
   50         | KWD_SOCKET
   51         | KWD_ENTRY
   52         | KWD_VOID

   53 usertypes: id

   54 align: KWD_ALIGN
   55      | KWD_NOALIGN
   56      | KWD_ALIGN KWD_BYTE
   57      | KWD_ALIGN KWD_WORD
   58      | KWD_ALIGN KWD_LONG
   59      | KWD_ALIGN KWD_QUAD
   60      | KWD_ALIGN KWD_OCTA
   61      | KWD_ALIGN KWD_PAGE

   62 radix: KWD_RADIX KWD_DEC
   63      | KWD_RADIX KWD_OCT
   64      | KWD_RADIX KWD_BIN
   65      | KWD_RADIX KWD_HEX

   66 constant_opts: %empty

   67 $@5: %empty

   68 constant_opts: pref $@5 constant_opts

   69 $@6: %empty

   70 constant_opts: tag $@6 constant_opts

   71 $@7: %empty

   72 constant_opts: KWD_MASK $@7 constlist_opts
   73              | EOL

   74 constlist_opts: %empty

   75 $@8: %empty

   76 constlist_opts: pref $@8 constlist_opts

   77 $@9: %empty

   78 constlist_opts: tag $@9 constlist_opts

   79 $@10: %empty

   80 constlist_opts: inc $@10 constlist_opts

   81 $@11: %empty

   82 constlist_opts: radix $@11 constlist_opts

   83 $@12: %empty

   84 constlist_opts: KWD_MASK $@12 constlist_opts
   85               | EOL

   86 constlist_ids: %empty

   87 $@13: %empty

   88 constlist_ids: id KWD_EQ value $@13 constlist_ids

   89 $@14: %empty

   90 constlist_ids: id $@14 constlist_ids

   91 $@15: %empty

   92 constlist_ids: COMMA comment $@15 constlist_ids

   93 $@16: %empty

   94 constlist_ids: comment $@16 constlist_ids
   95              | COMMA constlist_ids
   96              | CLOSE_LIST

   97 constant: %empty

   98 $@17: %empty

   99 constant: KWD_CONST OPEN_LIST constlist_ids KWD_EQ value $@17 constlist_opts

  100 $@18: %empty

  101 constant: KWD_CONST id KWD_EQ value $@18 constant_opts

  102 struct_items: %empty
  103             | KWD_END id EOL

  104 $@19: %empty

  105 struct_items: id KWD_STRUCT $@19 struct_opts struct_items KWD_END id EOL

  106 $@20: %empty

  107 struct_items: id KWD_UNION $@20 union_opts union_items KWD_END id EOL

  108 $@21: %empty

  109 struct_items: id basetypes $@21 field_opts struct_items

  110 $@22: %empty

  111 struct_items: id syntypes $@22 field_opts struct_items

  112 $@23: %empty

  113 struct_items: id usertypes $@23 field_opts struct_items

  114 $@24: %empty

  115 struct_items: comment $@24 struct_items

  116 union_items: %empty
  117            | KWD_END id EOL

  118 $@25: %empty

  119 union_items: id KWD_STRUCT $@25 struct_opts struct_items KWD_END id EOL

  120 $@26: %empty

  121 union_items: id KWD_UNION $@26 union_opts union_items KWD_END id EOL

  122 $@27: %empty

  123 union_items: id basetypes $@27 field_opts union_items

  124 $@28: %empty

  125 union_items: id syntypes $@28 field_opts union_items

  126 $@29: %empty

  127 union_items: id usertypes $@29 field_opts union_items

  128 $@30: %empty

  129 union_items: comment $@30 union_items

  130 $@31: %empty

  131 struct_opts: tag $@31 struct_opts

  132 $@32: %empty

  133 struct_opts: pref $@32 struct_opts

  134 $@33: %empty

  135 struct_opts: align $@33 struct_opts
  136            | EOL

  137 $@34: %empty

  138 union_opts: tag $@34 union_opts

  139 $@35: %empty

  140 union_opts: pref $@35 union_opts
  141           | EOL

  142 $@36: %empty

  143 field_opts: sizespec $@36 field_opts

  144 $@37: %empty

  145 field_opts: signspec $@37 field_opts
  146           | EOL

  147 agg_items: %empty
  148          | KWD_END id EOL

  149 $@38: %empty

  150 agg_items: id KWD_STRUCT $@38 struct_opts struct_items agg_items

  151 $@39: %empty

  152 agg_items: id KWD_UNION $@39 union_opts union_items agg_items

  153 $@40: %empty

  154 agg_items: id basetypes $@40 field_opts agg_items

  155 $@41: %empty

  156 agg_items: id syntypes $@41 field_opts agg_items

  157 $@42: %empty

  158 agg_items: id usertypes $@42 field_opts agg_items

  159 $@43: %empty

  160 agg_items: comment $@43 agg_items

  161 $@44: %empty

  162 agg_opts: KWD_STRUCT $@44 agg_opts

  163 $@45: %empty

  164 agg_opts: KWD_UNION $@45 agg_opts

  165 $@46: %empty

  166 agg_opts: tag $@46 agg_opts

  167 $@47: %empty

  168 agg_opts: pref $@47 agg_opts

  169 $@48: %empty

  170 agg_opts: align $@48 agg_opts
  171         | EOL

  172 $@49: %empty

  173 aggregate: KWD_AGGREGATE id $@49 agg_opts agg_items


Terminals, with rules where they appear

$end (0) 0
error (256) 3
KWD_INCLUDE (258)
KWD_IDENT (259) 21
KWD_MODULE (260) 21
KWD_END_MODULE (261) 22
KWD_LITERAL (262) 17
KWD_END_LITERAL (263) 20
KWD_PREFIX (264) 28
KWD_TAG (265) 27
KWD_BYTE (266) 35 56
KWD_WORD (267) 36 57
KWD_LONG (268) 37 58
KWD_QUAD (269) 38 59
KWD_OCTA (270) 39 60
KWD_BFLD (271) 40
KWD_FLOAT (272) 41
KWD_DOUBLE (273) 42
KWD_PAGE (274) 61
KWD_SIGNED (275) 32
KWD_UNSIGNED (276) 33
KWD_DIMENSION (277) 31
KWD_LENGTH (278) 30
KWD_PACKED (279) 43
KWD_PTR (280) 34
KWD_VOID (281) 52
KWD_ENTRY (282) 51
KWD_MASK (283) 72 84
KWD_NOALIGN (284) 55
KWD_ALIGN (285) 54 56 57 58 59 60 61
KWD_ASCIC (286) 44
KWD_DESC (287) 45
KWD_HWADDR (288) 46
KWD_IPADDR (289) 47
KWD_IP4ADDR (290) 48
KWD_IP6ADDR (291) 49
KWD_SOCKET (292) 50
KWD_CONST (293) 99 101
KWD_EQ (294) 13 15 88 99 101
KWD_INC (295) 29
OPEN_LIST (296) 99
COMMA (297) 92 95
CLOSE_LIST (298) 96
KWD_RADIX (299) 62 63 64 65
KWD_DEC (300) 62
KWD_HEX (301) 65
KWD_OCT (302) 63
KWD_BIN (303) 64
KWD_AGGREGATE (304) 173
KWD_STRUCT (305) 105 119 150 162
KWD_UNION (306) 107 121 152 164
KWD_END (307) 103 105 107 117 119 121 148
sdlvar (308) 13 15 23
decimal (309) 24
hexadecimal (310) 25
octal (311) 26
id (312) 21 53 88 90 101 103 105 107 109 111 113 117 119 121 123 125
    127 148 150 152 154 156 158 173
tline (313) 19
comment (314) 5 92 94 115 129 160
quoted_string (315) 13 21 27 28
EOL (316) 13 15 17 20 21 22 73 85 103 105 107 117 119 121 136 141 146
    148 171


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
prog (63)
    on left: 1 2 3, on right: 0 2 3
line (64)
    on left: 4 5 6 7 8 9 10 11, on right: 2
varset (65)
    on left: 13 15, on right: 10
$@1 (66)
    on left: 12, on right: 13
$@2 (67)
    on left: 14, on right: 15
literal (68)
    on left: 17 19 20, on right: 11 17 19
$@3 (69)
    on left: 16, on right: 17
$@4 (70)
    on left: 18, on right: 19
module (71)
    on left: 21, on right: 6
end_module (72)
    on left: 22, on right: 7
value (73)
    on left: 23 24 25 26, on right: 15 29 30 31 88 99 101
tag (74)
    on left: 27, on right: 70 78 131 138 166
pref (75)
    on left: 28, on right: 68 76 133 140 168
inc (76)
    on left: 29, on right: 80
sizespec (77)
    on left: 30 31, on right: 143
signspec (78)
    on left: 32 33, on right: 145
basetypes (79)
    on left: 34 35 36 37 38 39 40 41 42, on right: 109 123 154
syntypes (80)
    on left: 43 44 45 46 47 48 49 50 51 52, on right: 111 125 156
usertypes (81)
    on left: 53, on right: 113 127 158
align (82)
    on left: 54 55 56 57 58 59 60 61, on right: 135 170
radix (83)
    on left: 62 63 64 65, on right: 82
constant_opts (84)
    on left: 66 68 70 72 73, on right: 68 70 101
$@5 (85)
    on left: 67, on right: 68
$@6 (86)
    on left: 69, on right: 70
$@7 (87)
    on left: 71, on right: 72
constlist_opts (88)
    on left: 74 76 78 80 82 84 85, on right: 72 76 78 80 82 84 99
$@8 (89)
    on left: 75, on right: 76
$@9 (90)
    on left: 77, on right: 78
$@10 (91)
    on left: 79, on right: 80
$@11 (92)
    on left: 81, on right: 82
$@12 (93)
    on left: 83, on right: 84
constlist_ids (94)
    on left: 86 88 90 92 94 95 96, on right: 88 90 92 94 95 99
$@13 (95)
    on left: 87, on right: 88
$@14 (96)
    on left: 89, on right: 90
$@15 (97)
    on left: 91, on right: 92
$@16 (98)
    on left: 93, on right: 94
constant (99)
    on left: 97 99 101, on right: 9
$@17 (100)
    on left: 98, on right: 99
$@18 (101)
    on left: 100, on right: 101
struct_items (102)
    on left: 102 103 105 107 109 111 113 115, on right: 105 109 111
    113 115 119 150
$@19 (103)
    on left: 104, on right: 105
$@20 (104)
    on left: 106, on right: 107
$@21 (105)
    on left: 108, on right: 109
$@22 (106)
    on left: 110, on right: 111
$@23 (107)
    on left: 112, on right: 113
$@24 (108)
    on left: 114, on right: 115
union_items (109)
    on left: 116 117 119 121 123 125 127 129, on right: 107 121 123
    125 127 129 152
$@25 (110)
    on left: 118, on right: 119
$@26 (111)
    on left: 120, on right: 121
$@27 (112)
    on left: 122, on right: 123
$@28 (113)
    on left: 124, on right: 125
$@29 (114)
    on left: 126, on right: 127
$@30 (115)
    on left: 128, on right: 129
struct_opts (116)
    on left: 131 133 135 136, on right: 105 119 131 133 135 150
$@31 (117)
    on left: 130, on right: 131
$@32 (118)
    on left: 132, on right: 133
$@33 (119)
    on left: 134, on right: 135
union_opts (120)
    on left: 138 140 141, on right: 107 121 138 140 152
$@34 (121)
    on left: 137, on right: 138
$@35 (122)
    on left: 139, on right: 140
field_opts (123)
    on left: 143 145 146, on right: 109 111 113 123 125 127 143 145
    154 156 158
$@36 (124)
    on left: 142, on right: 143
$@37 (125)
    on left: 144, on right: 145
agg_items (126)
    on left: 147 148 150 152 154 156 158 160, on right: 150 152 154
    156 158 160 173
$@38 (127)
    on left: 149, on right: 150
$@39 (128)
    on left: 151, on right: 152
$@40 (129)
    on left: 153, on right: 154
$@41 (130)
    on left: 155, on right: 156
$@42 (131)
    on left: 157, on right: 158
$@43 (132)
    on left: 159, on right: 160
agg_opts (133)
    on left: 162 164 166 168 170 171, on right: 162 164 166 168 170
    173
$@44 (134)
    on left: 161, on right: 162
$@45 (135)
    on left: 163, on right: 164
$@46 (136)
    on left: 165, on right: 166
$@47 (137)
    on left: 167, on right: 168
$@48 (138)
    on left: 169, on right: 170
aggregate (139)
    on left: 173, on right: 8
$@49 (140)
    on left: 172, on right: 173


State 0

    0 $accept: . prog $end

    $default  reduce using rule 1 (prog)

    prog  go to state 1


State 1

    0 $accept: prog . $end
    2 prog: prog . line
    3     | prog . error

    $end             shift, and go to state 2
    error            shift, and go to state 3
    KWD_MODULE       shift, and go to state 4
    KWD_END_MODULE   shift, and go to state 5
    KWD_LITERAL      shift, and go to state 6
    KWD_END_LITERAL  shift, and go to state 7
    KWD_CONST        shift, and go to state 8
    KWD_AGGREGATE    shift, and go to state 9
    sdlvar           shift, and go to state 10
    tline            shift, and go to state 11
    comment          shift, and go to state 12

    $end             [reduce using rule 4 (line)]
    $end             [reduce using rule 97 (constant)]
    error            [reduce using rule 4 (line)]
    error            [reduce using rule 97 (constant)]
    KWD_MODULE       [reduce using rule 4 (line)]
    KWD_MODULE       [reduce using rule 97 (constant)]
    KWD_END_MODULE   [reduce using rule 4 (line)]
    KWD_END_MODULE   [reduce using rule 97 (constant)]
    KWD_LITERAL      [reduce using rule 4 (line)]
    KWD_LITERAL      [reduce using rule 97 (constant)]
    KWD_END_LITERAL  [reduce using rule 4 (line)]
    KWD_END_LITERAL  [reduce using rule 97 (constant)]
    KWD_CONST        [reduce using rule 4 (line)]
    KWD_CONST        [reduce using rule 97 (constant)]
    KWD_AGGREGATE    [reduce using rule 4 (line)]
    KWD_AGGREGATE    [reduce using rule 97 (constant)]
    sdlvar           [reduce using rule 4 (line)]
    sdlvar           [reduce using rule 97 (constant)]
    tline            [reduce using rule 4 (line)]
    tline            [reduce using rule 97 (constant)]
    comment          [reduce using rule 4 (line)]
    comment          [reduce using rule 97 (constant)]

    line        go to state 13
    varset      go to state 14
    literal     go to state 15
    module      go to state 16
    end_module  go to state 17
    constant    go to state 18
    aggregate   go to state 19


State 2

    0 $accept: prog $end .

    $default  accept


State 3

    3 prog: prog error .

    $default  reduce using rule 3 (prog)


State 4

   21 module: KWD_MODULE . id KWD_IDENT quoted_string EOL

    id  shift, and go to state 20


State 5

   22 end_module: KWD_END_MODULE . EOL

    EOL  shift, and go to state 21


State 6

   17 literal: KWD_LITERAL . EOL $@3 literal

    EOL  shift, and go to state 22


State 7

   20 literal: KWD_END_LITERAL . EOL

    EOL  shift, and go to state 23


State 8

   99 constant: KWD_CONST . OPEN_LIST constlist_ids KWD_EQ value $@17 constlist_opts
  101         | KWD_CONST . id KWD_EQ value $@18 constant_opts

    OPEN_LIST  shift, and go to state 24
    id         shift, and go to state 25


State 9

  173 aggregate: KWD_AGGREGATE . id $@49 agg_opts agg_items

    id  shift, and go to state 26


State 10

   13 varset: sdlvar . KWD_EQ quoted_string $@1 EOL
   15       | sdlvar . KWD_EQ value $@2 EOL

    KWD_EQ  shift, and go to state 27


State 11

   19 literal: tline . $@4 literal

    $default  reduce using rule 18 ($@4)

    $@4  go to state 28


State 12

    5 line: comment .

    $default  reduce using rule 5 (line)


State 13

    2 prog: prog line .

    $default  reduce using rule 2 (prog)


State 14

   10 line: varset .

    $default  reduce using rule 10 (line)


State 15

   11 line: literal .

    $default  reduce using rule 11 (line)


State 16

    6 line: module .

    $default  reduce using rule 6 (line)


State 17

    7 line: end_module .

    $default  reduce using rule 7 (line)


State 18

    9 line: constant .

    $default  reduce using rule 9 (line)


State 19

    8 line: aggregate .

    $default  reduce using rule 8 (line)


State 20

   21 module: KWD_MODULE id . KWD_IDENT quoted_string EOL

    KWD_IDENT  shift, and go to state 29


State 21

   22 end_module: KWD_END_MODULE EOL .

    $default  reduce using rule 22 (end_module)


State 22

   17 literal: KWD_LITERAL EOL . $@3 literal

    $default  reduce using rule 16 ($@3)

    $@3  go to state 30


State 23

   20 literal: KWD_END_LITERAL EOL .

    $default  reduce using rule 20 (literal)


State 24

   99 constant: KWD_CONST OPEN_LIST . constlist_ids KWD_EQ value $@17 constlist_opts

    COMMA       shift, and go to state 31
    CLOSE_LIST  shift, and go to state 32
    id          shift, and go to state 33
    comment     shift, and go to state 34

    $default  reduce using rule 86 (constlist_ids)

    constlist_ids  go to state 35


State 25

  101 constant: KWD_CONST id . KWD_EQ value $@18 constant_opts

    KWD_EQ  shift, and go to state 36


State 26

  173 aggregate: KWD_AGGREGATE id . $@49 agg_opts agg_items

    $default  reduce using rule 172 ($@49)

    $@49  go to state 37


State 27

   13 varset: sdlvar KWD_EQ . quoted_string $@1 EOL
   15       | sdlvar KWD_EQ . value $@2 EOL

    sdlvar         shift, and go to state 38
    decimal        shift, and go to state 39
    hexadecimal    shift, and go to state 40
    octal          shift, and go to state 41
    quoted_string  shift, and go to state 42

    value  go to state 43


State 28

   19 literal: tline $@4 . literal

    KWD_LITERAL      shift, and go to state 6
    KWD_END_LITERAL  shift, and go to state 7
    tline            shift, and go to state 11

    literal  go to state 44


State 29

   21 module: KWD_MODULE id KWD_IDENT . quoted_string EOL

    quoted_string  shift, and go to state 45


State 30

   17 literal: KWD_LITERAL EOL $@3 . literal

    KWD_LITERAL      shift, and go to state 6
    KWD_END_LITERAL  shift, and go to state 7
    tline            shift, and go to state 11

    literal  go to state 46


State 31

   92 constlist_ids: COMMA . comment $@15 constlist_ids
   95              | COMMA . constlist_ids

    COMMA       shift, and go to state 31
    CLOSE_LIST  shift, and go to state 32
    id          shift, and go to state 33
    comment     shift, and go to state 47

    $default  reduce using rule 86 (constlist_ids)

    constlist_ids  go to state 48


State 32

   96 constlist_ids: CLOSE_LIST .

    $default  reduce using rule 96 (constlist_ids)


State 33

   88 constlist_ids: id . KWD_EQ value $@13 constlist_ids
   90              | id . $@14 constlist_ids

    KWD_EQ  shift, and go to state 49

    KWD_EQ    [reduce using rule 89 ($@14)]
    $default  reduce using rule 89 ($@14)

    $@14  go to state 50


State 34

   94 constlist_ids: comment . $@16 constlist_ids

    $default  reduce using rule 93 ($@16)

    $@16  go to state 51


State 35

   99 constant: KWD_CONST OPEN_LIST constlist_ids . KWD_EQ value $@17 constlist_opts

    KWD_EQ  shift, and go to state 52


State 36

  101 constant: KWD_CONST id KWD_EQ . value $@18 constant_opts

    sdlvar       shift, and go to state 38
    decimal      shift, and go to state 39
    hexadecimal  shift, and go to state 40
    octal        shift, and go to state 41

    value  go to state 53


State 37

  173 aggregate: KWD_AGGREGATE id $@49 . agg_opts agg_items

    KWD_PREFIX   shift, and go to state 54
    KWD_TAG      shift, and go to state 55
    KWD_NOALIGN  shift, and go to state 56
    KWD_ALIGN    shift, and go to state 57
    KWD_STRUCT   shift, and go to state 58
    KWD_UNION    shift, and go to state 59
    EOL          shift, and go to state 60

    tag       go to state 61
    pref      go to state 62
    align     go to state 63
    agg_opts  go to state 64


State 38

   23 value: sdlvar .

    $default  reduce using rule 23 (value)


State 39

   24 value: decimal .

    $default  reduce using rule 24 (value)


State 40

   25 value: hexadecimal .

    $default  reduce using rule 25 (value)


State 41

   26 value: octal .

    $default  reduce using rule 26 (value)


State 42

   13 varset: sdlvar KWD_EQ quoted_string . $@1 EOL

    $default  reduce using rule 12 ($@1)

    $@1  go to state 65


State 43

   15 varset: sdlvar KWD_EQ value . $@2 EOL

    $default  reduce using rule 14 ($@2)

    $@2  go to state 66


State 44

   19 literal: tline $@4 literal .

    $default  reduce using rule 19 (literal)


State 45

   21 module: KWD_MODULE id KWD_IDENT quoted_string . EOL

    EOL  shift, and go to state 67


State 46

   17 literal: KWD_LITERAL EOL $@3 literal .

    $default  reduce using rule 17 (literal)


State 47

   92 constlist_ids: COMMA comment . $@15 constlist_ids
   94              | comment . $@16 constlist_ids

    KWD_EQ      reduce using rule 91 ($@15)
    KWD_EQ      [reduce using rule 93 ($@16)]
    COMMA       reduce using rule 91 ($@15)
    COMMA       [reduce using rule 93 ($@16)]
    CLOSE_LIST  reduce using rule 91 ($@15)
    CLOSE_LIST  [reduce using rule 93 ($@16)]
    id          reduce using rule 91 ($@15)
    id          [reduce using rule 93 ($@16)]
    comment     reduce using rule 91 ($@15)
    comment     [reduce using rule 93 ($@16)]
    $default    reduce using rule 91 ($@15)

    $@15  go to state 68
    $@16  go to state 51


State 48

   95 constlist_ids: COMMA constlist_ids .

    $default  reduce using rule 95 (constlist_ids)


State 49

   88 constlist_ids: id KWD_EQ . value $@13 constlist_ids

    sdlvar       shift, and go to state 38
    decimal      shift, and go to state 39
    hexadecimal  shift, and go to state 40
    octal        shift, and go to state 41

    value  go to state 69


State 50

   90 constlist_ids: id $@14 . constlist_ids

    COMMA       shift, and go to state 31
    CLOSE_LIST  shift, and go to state 32
    id          shift, and go to state 33
    comment     shift, and go to state 34

    $default  reduce using rule 86 (constlist_ids)

    constlist_ids  go to state 70


State 51

   94 constlist_ids: comment $@16 . constlist_ids

    COMMA       shift, and go to state 31
    CLOSE_LIST  shift, and go to state 32
    id          shift, and go to state 33
    comment     shift, and go to state 34

    $default  reduce using rule 86 (constlist_ids)

    constlist_ids  go to state 71


State 52

   99 constant: KWD_CONST OPEN_LIST constlist_ids KWD_EQ . value $@17 constlist_opts

    sdlvar       shift, and go to state 38
    decimal      shift, and go to state 39
    hexadecimal  shift, and go to state 40
    octal        shift, and go to state 41

    value  go to state 72


State 53

  101 constant: KWD_CONST id KWD_EQ value . $@18 constant_opts

    $default  reduce using rule 100 ($@18)

    $@18  go to state 73


State 54

   28 pref: KWD_PREFIX . quoted_string

    quoted_string  shift, and go to state 74


State 55

   27 tag: KWD_TAG . quoted_string

    quoted_string  shift, and go to state 75


State 56

   55 align: KWD_NOALIGN .

    $default  reduce using rule 55 (align)


State 57

   54 align: KWD_ALIGN .
   56      | KWD_ALIGN . KWD_BYTE
   57      | KWD_ALIGN . KWD_WORD
   58      | KWD_ALIGN . KWD_LONG
   59      | KWD_ALIGN . KWD_QUAD
   60      | KWD_ALIGN . KWD_OCTA
   61      | KWD_ALIGN . KWD_PAGE

    KWD_BYTE  shift, and go to state 76
    KWD_WORD  shift, and go to state 77
    KWD_LONG  shift, and go to state 78
    KWD_QUAD  shift, and go to state 79
    KWD_OCTA  shift, and go to state 80
    KWD_PAGE  shift, and go to state 81

    $default  reduce using rule 54 (align)


State 58

  162 agg_opts: KWD_STRUCT . $@44 agg_opts

    $default  reduce using rule 161 ($@44)

    $@44  go to state 82


State 59

  164 agg_opts: KWD_UNION . $@45 agg_opts

    $default  reduce using rule 163 ($@45)

    $@45  go to state 83


State 60

  171 agg_opts: EOL .

    $default  reduce using rule 171 (agg_opts)


State 61

  166 agg_opts: tag . $@46 agg_opts

    $default  reduce using rule 165 ($@46)

    $@46  go to state 84


State 62

  168 agg_opts: pref . $@47 agg_opts

    $default  reduce using rule 167 ($@47)

    $@47  go to state 85


State 63

  170 agg_opts: align . $@48 agg_opts

    $default  reduce using rule 169 ($@48)

    $@48  go to state 86


State 64

  173 aggregate: KWD_AGGREGATE id $@49 agg_opts . agg_items

    KWD_END  shift, and go to state 87
    id       shift, and go to state 88
    comment  shift, and go to state 89

    comment   [reduce using rule 147 (agg_items)]
    $default  reduce using rule 147 (agg_items)

    agg_items  go to state 90


State 65

   13 varset: sdlvar KWD_EQ quoted_string $@1 . EOL

    EOL  shift, and go to state 91


State 66

   15 varset: sdlvar KWD_EQ value $@2 . EOL

    EOL  shift, and go to state 92


State 67

   21 module: KWD_MODULE id KWD_IDENT quoted_string EOL .

    $default  reduce using rule 21 (module)


State 68

   92 constlist_ids: COMMA comment $@15 . constlist_ids

    COMMA       shift, and go to state 31
    CLOSE_LIST  shift, and go to state 32
    id          shift, and go to state 33
    comment     shift, and go to state 34

    $default  reduce using rule 86 (constlist_ids)

    constlist_ids  go to state 93


State 69

   88 constlist_ids: id KWD_EQ value . $@13 constlist_ids

    $default  reduce using rule 87 ($@13)

    $@13  go to state 94


State 70

   90 constlist_ids: id $@14 constlist_ids .

    $default  reduce using rule 90 (constlist_ids)


State 71

   94 constlist_ids: comment $@16 constlist_ids .

    $default  reduce using rule 94 (constlist_ids)


State 72

   99 constant: KWD_CONST OPEN_LIST constlist_ids KWD_EQ value . $@17 constlist_opts

    $default  reduce using rule 98 ($@17)

    $@17  go to state 95


State 73

  101 constant: KWD_CONST id KWD_EQ value $@18 . constant_opts

    KWD_PREFIX  shift, and go to state 54
    KWD_TAG     shift, and go to state 55
    KWD_MASK    shift, and go to state 96
    EOL         shift, and go to state 97

    $default  reduce using rule 66 (constant_opts)

    tag            go to state 98
    pref           go to state 99
    constant_opts  go to state 100


State 74

   28 pref: KWD_PREFIX quoted_string .

    $default  reduce using rule 28 (pref)


State 75

   27 tag: KWD_TAG quoted_string .

    $default  reduce using rule 27 (tag)


State 76

   56 align: KWD_ALIGN KWD_BYTE .

    $default  reduce using rule 56 (align)


State 77

   57 align: KWD_ALIGN KWD_WORD .

    $default  reduce using rule 57 (align)


State 78

   58 align: KWD_ALIGN KWD_LONG .

    $default  reduce using rule 58 (align)


State 79

   59 align: KWD_ALIGN KWD_QUAD .

    $default  reduce using rule 59 (align)


State 80

   60 align: KWD_ALIGN KWD_OCTA .

    $default  reduce using rule 60 (align)


State 81

   61 align: KWD_ALIGN KWD_PAGE .

    $default  reduce using rule 61 (align)


State 82

  162 agg_opts: KWD_STRUCT $@44 . agg_opts

    KWD_PREFIX   shift, and go to state 54
    KWD_TAG      shift, and go to state 55
    KWD_NOALIGN  shift, and go to state 56
    KWD_ALIGN    shift, and go to state 57
    KWD_STRUCT   shift, and go to state 58
    KWD_UNION    shift, and go to state 59
    EOL          shift, and go to state 60

    tag       go to state 61
    pref      go to state 62
    align     go to state 63
    agg_opts  go to state 101


State 83

  164 agg_opts: KWD_UNION $@45 . agg_opts

    KWD_PREFIX   shift, and go to state 54
    KWD_TAG      shift, and go to state 55
    KWD_NOALIGN  shift, and go to state 56
    KWD_ALIGN    shift, and go to state 57
    KWD_STRUCT   shift, and go to state 58
    KWD_UNION    shift, and go to state 59
    EOL          shift, and go to state 60

    tag       go to state 61
    pref      go to state 62
    align     go to state 63
    agg_opts  go to state 102


State 84

  166 agg_opts: tag $@46 . agg_opts

    KWD_PREFIX   shift, and go to state 54
    KWD_TAG      shift, and go to state 55
    KWD_NOALIGN  shift, and go to state 56
    KWD_ALIGN    shift, and go to state 57
    KWD_STRUCT   shift, and go to state 58
    KWD_UNION    shift, and go to state 59
    EOL          shift, and go to state 60

    tag       go to state 61
    pref      go to state 62
    align     go to state 63
    agg_opts  go to state 103


State 85

  168 agg_opts: pref $@47 . agg_opts

    KWD_PREFIX   shift, and go to state 54
    KWD_TAG      shift, and go to state 55
    KWD_NOALIGN  shift, and go to state 56
    KWD_ALIGN    shift, and go to state 57
    KWD_STRUCT   shift, and go to state 58
    KWD_UNION    shift, and go to state 59
    EOL          shift, and go to state 60

    tag       go to state 61
    pref      go to state 62
    align     go to state 63
    agg_opts  go to state 104


State 86

  170 agg_opts: align $@48 . agg_opts

    KWD_PREFIX   shift, and go to state 54
    KWD_TAG      shift, and go to state 55
    KWD_NOALIGN  shift, and go to state 56
    KWD_ALIGN    shift, and go to state 57
    KWD_STRUCT   shift, and go to state 58
    KWD_UNION    shift, and go to state 59
    EOL          shift, and go to state 60

    tag       go to state 61
    pref      go to state 62
    align     go to state 63
    agg_opts  go to state 105


State 87

  148 agg_items: KWD_END . id EOL

    id  shift, and go to state 106


State 88

  150 agg_items: id . KWD_STRUCT $@38 struct_opts struct_items agg_items
  152          | id . KWD_UNION $@39 union_opts union_items agg_items
  154          | id . basetypes $@40 field_opts agg_items
  156          | id . syntypes $@41 field_opts agg_items
  158          | id . usertypes $@42 field_opts agg_items

    KWD_BYTE     shift, and go to state 107
    KWD_WORD     shift, and go to state 108
    KWD_LONG     shift, and go to state 109
    KWD_QUAD     shift, and go to state 110
    KWD_OCTA     shift, and go to state 111
    KWD_BFLD     shift, and go to state 112
    KWD_FLOAT    shift, and go to state 113
    KWD_DOUBLE   shift, and go to state 114
    KWD_PACKED   shift, and go to state 115
    KWD_PTR      shift, and go to state 116
    KWD_VOID     shift, and go to state 117
    KWD_ENTRY    shift, and go to state 118
    KWD_ASCIC    shift, and go to state 119
    KWD_DESC     shift, and go to state 120
    KWD_HWADDR   shift, and go to state 121
    KWD_IPADDR   shift, and go to state 122
    KWD_IP4ADDR  shift, and go to state 123
    KWD_IP6ADDR  shift, and go to state 124
    KWD_SOCKET   shift, and go to state 125
    KWD_STRUCT   shift, and go to state 126
    KWD_UNION    shift, and go to state 127
    id           shift, and go to state 128

    basetypes  go to state 129
    syntypes   go to state 130
    usertypes  go to state 131


State 89

  160 agg_items: comment . $@43 agg_items
